# fio-analyzer

./: .cursorrules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  MIGRATION_SUMMARY.md  README.md  fio-test.sh  package-lock.json  package.json  quick-start.sh  release.sh  setup-backend-uv.sh  setup-backend-venv.sh  start-frontend-backend.sh
.claude/: settings.json
UsedPrompts/: Promt-Create-Page.md
backend/: .flake8  .htpasswd  .htuploaders  Makefile  api_models.py  check_syntax.py  eslint.config.js  index.js  lint_check.py  main.py  package-lock.json  package.json  pyproject.toml  quick_check.py  requirements.txt  test_api.py
backend/auth/: authentication.py  index.js  middleware.py
backend/config/: index.js  settings.py
backend/database/: connection.py  index.js  models.py  schemas.py  service.py
backend/routers/: imports.py  test_runs.py  time_series.py  users.py  utils_router.py
backend/routes/: import.js  index.js  test-runs.js  time-series.js  utils.js
backend/scripts/: README.md  change-password.js  import-all.js  import-utils.js  manage-uploaders.js  manage-users.js  manage_users.py  migrate-to-dual-table.sql  migrate-to-simplified-schema.sql  migrate_add_uuids.py  migrate_saturation_data.py  rollback-dual-table.sql  run-migration.js  run-simplified-migration.js  update_duration.py  validate-migration.sql
backend/utils/: helpers.py  index.js  logging.py
docker/: .env.example  README.md  compose.prod.yml  compose.yml  push-to-registry.sh
frontend-vue.backup/: .eslintrc.cjs  (+4 more)
(+488 files in other folders)
