[project]
name = "fio-analyzer-backend"
version = "1.0.0"
description = "FastAPI backend for FIO Storage Performance Analyzer"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "bcrypt==4.1.1",
    "python-jose[cryptography]==3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"