[project]
name = "fio-analyzer-backend"
version = "1.0.0"
description = "FastAPI backend for FIO Storage Performance Analyzer"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "bcrypt==4.1.1",
    "python-jose[cryptography]==3.3.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 180
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 180
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
